--- a/client/templates/client/image_form.html
+++ b/client/templates/client/image_form.html
@@ -7,7 +7,7 @@
 <body>
     <form method = "post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ user_pic.as_p }}
         <button type="submit">Upload</button>
     </form>
 </body>
